--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,12 @@
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.PlayerContainer {
+  position: relative;
+  width: 640px;
+  height: 360px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#cueBox {
+  position: absolute;
+  bottom: 50px;
+  height: 310px;
+  width: 640px;
 }
